I removed some unused code and biloplate code in the project. I also implemented more architectural patterns in the app to reduce memory usage. I also totally changed the UI design of the app

--- a/app/src/main/assets/MY FILES/THE INTRODUCTORY RITE.html
+++ b/app/src/main/assets/MY FILES/THE INTRODUCTORY RITE.html
@@ -14,7 +14,7 @@
                             <div class="explanation">
                                 <div class="explanation">
                                     <div class="explanation"><p><span
-                                            style="color: #990000;">and]</span><br/><a
+                                            style="color: #990000;">[stand]</span><br/><a
                                             href="https://catholic-resources.org/Bible/Christological_Titles.htm"
                                             target="_blank"><img
                                             src="https://catholic-resources.org/Symbols/Koch-054.gif"
